--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
      "predeploy": "npm run build",
-     "deploy": "gh-pages -d out"
+     "deploy": "gh-pages -d out",
+      "export": "next export"   
   },
   "dependencies": {
     "@genkit-ai/googleai": "^1.14.1",
